@@ -93,8 +93,11 @@ class Site < ActiveRecord::Base
   end
 
   def tags
-    Tag.find(:all, :conditions => ['contents.type = ? AND contents.site_id = ?', 'Article', id], :order => 'tags.name',
-      :joins => "INNER JOIN taggings ON taggings.tag_id = tags.id INNER JOIN contents ON (taggings.taggable_id = contents.id AND taggings.taggable_type = 'Content')")
+    Tag.find(:all, :select      => "DISTINCT tags.name",
+                   :joins       => "INNER JOIN taggings ON taggings.tag_id = tags.id INNER JOIN contents ON (taggings.taggable_id = contents.id AND 
+                                    taggings.taggable_type = 'Content')",
+                   :conditions  => ['contents.type = ? AND contents.site_id = ?', 'Article', id],
+                   :order       => 'tags.name')
   end
 
   def theme_path
